--- a/html/bs/index.html
+++ b/html/bs/index.html
@@ -411,19 +411,80 @@
 								<video src="./videos/03_busuk.mp4" poster="images/bousk.png" width="640" preload="metadata" controls="controls"></video>
 								<p>&nbsp;&nbsp;어른은 물론이고 아무리 어린 학생이라 해도 십여년 살아오면서 수많은 경험을 하고 그 경험에 대한 저마다의 해석과 느낌을 마음 속에 품은 채 지금 여기를 살아간다. 그래서 어떤 새로운 경험을 하게 되면 과거의 경험을 바탕으로 새로운 경험에 대한 평가와 판단과 해석을 하게 된다. 서로의 경험이 다르다면 같은 시간 같은 공간에서 새로운 경험을 공유했더라도 그에 대해 남는 인상은 다를 것이다. 교사가 갈등을 부담스러워하는 두번째 이유는, 학생 간의 갈등이 점차 커져서 수습하기 곤란해지거나, 갈등을 제대로 해결하지 못해 마음의 짐으로 남은 ‘과거의 경험’들이 지금 현재를 지배하기 때문이다. 교사가 (1) ~ (3)의 대화 기술을 이용해 학생간의 갈등을 중재해 주고 나면, 학생들에게는 그 경험이 어떻게 기억될까?</p>
 								<p>&nbsp;&nbsp;한 친구를 ‘나와 싸운 친구’로 인식하며 평생 사는 것과, ‘나와 화해한 친구’로 인식하며 사는 것 중 어느 쪽이 행복할까? 수험에서 실패한 일을 ‘내가 실패한 경험’으로 인식하며 사는 사람과 ‘실패했지만 좌절하지 않았던 경험’으로 인식하며 사는 사람은 어째서 달라지는가? 갈등 관리가 중요한 이유이다.</p>
-
 							</section>
 							
 							<section>
-								<h2><a name="4">4. 학생들 사이의 갈등 해결</a></h2>
-								<ol>
-									<li>학생의 생활을 학교 규칙에 맞도록 변화시키기</li>
-									<li>학생에 대해 잘 이해하기</li>
-									<li>학생과의 관계를 향상시켜 수업에 도움을 받기</li>
-									<li>학생들 사이의 갈등을 해결하기</li>
-									<li>학생과 교사 자신의 갈등을 해결하기</li>
-								</ol>
-								<p>&nbsp;&nbsp;(1) 사실 듣기, (2) 기분 듣기, (3) 본심 듣기 의 원리를 이용하면 학생들 사이의 갈등을 해결하는 데에 도움이 된다. 갈등으로 감정이 격해진 학생들이 서로 가장 중요한 (2) 기분 듣기를 할 수 있도록 교사가 기회를 만들어주기만 하면 된다. 1:1로 다툰 경우, 교사는 시작 전 사실 관계를 확인하고 학생들이 작업에 참여할 기분인지를 확인하고 기분을 들어주어 참여 동기를 높인다. 중간 중간 학생들의 감정을 들어준다. 마치고 학생들의 기분을 또 들어주고 교사의 감정을 표현하거나 칭찬 등을 곁들인다. 절대 시시비비를 가리지 않으며, 이 사태나 학생이 느끼는 감정에 대한 교사의 판단을 말하지 않는다.</p>
+								<h2><a name="5">5. 학생과 교사 사이의 갈등 해결하기</a></h2>
+								<p>&nbsp;&nbsp;‘정신적 피해’라는 것을 대할 때는 두 가지 관점이 있다. 첫째, 눈에 보이지 않지만 본인이 그렇게 느낀다면, 그것은 실제하는 피해가 된다. 피해 당사자가 느끼고 있는 불안감, 혐오감, 불쾌감, 분노, 두려움, 불만 등을 ‘그건 실체가 아니야.’, ‘그건 오해한 거야.’, ‘그런 감정은 느껴선 안 돼.’라고 부정하는 것은 그 학생을 ‘이해’하는 태도가 아니다. 그것이 사실의 왜곡이나 본인의 피해의식, 강박관념이 만들어낸 허상이라 하더라도, 우선은 “그렇구나. 너는 그렇게 느끼는구나.”에서 출발해야 ‘본심’으로 찾아가는 길로 들어설 수 있게 된다. 둘째, 정신적 피해를 극복하는 것은 자존감을 올리는 길 뿐이다. 남들이 내 험담을 해서, 남들이 째려 봐서, 남들이 나를 따돌려서, 남들이 내 말을 안 들어줘서, 남들이... 그 모든 것들이 ‘남’에 의해 유발된 부정적 감정이다. 내 감정의 주인은 ‘나’여야 한다. 남들의 반응 하나하나에 일일이 내 감정이 흔들린다면 살아갈 수가 없다. 관계의 리더가 되어야 한다는 말이다. 그것은 학생 개인의 ‘자존감’과 관계 있는 부분이다.</p>
+								<p>&nbsp;&nbsp;왕따는 물리적인 문제이기도 하지만 정신적인 문제이기도 하다. 정신적인 왕따 문제라면 아래 영상에서처럼 '자존감'만 회복하면 아무런 문제가 안 된다. 그리고 아래 영상의 좋은 점은, 물리적인 왕따는 "괴롭힘"이 아니라 "범죄"라고 알려준다는 점이다. "범죄"는 참아 넘기면 안 되고 처벌해야 한다.
+								<video src="./videos/04_bull.mp4" width="640" preload="metadata" controls="controls"></video>
+								<p>&nbsp;&nbsp;그렇다고 이 영상에서처럼 학생에게 무작정 “자존감을 길러.” “친구들의 반응을 무시해.” “신경 끄면 되잖아.”라고 아무리 말해도 소용이 없다. 교사 자신이 학생의 자존감을 길러주는 대화를 해야 한다. 그것은 학생의 말을 있는 그대로 존중하는 것. 그리고 교사가 자존감이 높은 사람이 어떻게 행동하는가를 보여주는 것이다. 학생의 말을 모두 따라해주고, 학생의 감정을 섬세하게 들어주고, 학생의 말 속에 숨어 있는 이성적으로 건전한 ‘본심’을 알아봐 주는 말을 모든 학생들에게 반복적으로 해 주는 것이다. 그리고 교사 자신이, 학생들의 어떤 말에도 흔들리지 않고 올바른 대응을 하는 모습을 일상 생활에서 늘 보여줘야 된다.</p>
+								<table>
+									<tr>
+										<td>
+										<ul>
+											<li>학생: 선생님, 솔직히 우리 반에 관심 있으세요?</li>
+											<li>학생: 선생님, 선생님이 우리를 차별 대우해서 짜증나고 선생님이 싫어요!</li>
+										</ul>
+										</td>
+									</tr>
+								</table>
+								<p>&nbsp;&nbsp;학생들이 이렇게 말을 할 때 “아니 학생이 어떻게 이런 말을 할 수 있어?” “학생이 이렇게 말 하는데 내가 화가 안 나겠어요?” “학생이 이런 말을 하는데 듣고만 있었단 말이에요?”</p>
+								<p>&nbsp;&nbsp;학생들이 무슨 말을 하건 학생의 자유이다. 거기에 어떤 반응을 하든 그건 교사의 자유이다. 그러나 교사는 직업 윤리 때문에 ‘자유로운 반응’을 하면 안 되며 ‘교육적인 반응’을 해야 한다. 이 관계를 이해하면 어떤 인간 관계에서든 ‘리더’가 될 수 있고, 학생과 교사 사이에 발생하는 모든 갈등을 해결할 수 있다. ‘리더’란 대화를 이끄는 사람, 상대를 조종하는 사람이 아니다. 상대의 감정에 영향을 주는 사람이 ‘리더’이고, 상대의 말에 영향을 받아 감정이 흔들리는 사람이 ‘팔로워’가 된다. “네가 그렇게 말하니까 내가 화가 나지.”라고 말하면서 학생을 혼내는 교사는 지위상의 ‘리더’일 수는 있지만 감정적으로는 ‘팔로워’에 불과하다. </p>
+								<p>&nbsp;&nbsp;말을 하는 사람은 하는 자유가 있고, 듣는 사람은 듣는 사람의 자유가 있다. “교장 선생님이 부탁했는데 어떡하죠?”라고 묻는 교사가 많다. 그러면 사람들이 “아니 교장이 돼 가지고 왜 그런 부탁을 하냐?”라고 대신 화내 준다. 하지만 부탁하는 건 교장의 자유이고 그 부탁을 듣고 안 듣고는 듣는 사람의 자유이다. 학생이 쉬는 시간마다 와서 일일이 고자질을 해서 “제발 좀 이 아이를 안 내려오게 할 방법을 알려 주세요.”라고 하소연하는 교사가 있다. 내려오는 건 학생의 자유이고 그 아이를 돌려보내거나 들어주거나 하는 건 교사의 선택이다. “부장 선생님 저한테 화 좀 내지 마세요.” 화 내는 건 부장 교사의 자유이고, 그 화내는 모습에 어떻게 대응하는지는 나의 선택이다. 그렇다. ‘나’는 그 상황에서 상대의 말과 행동과 감정에 휘둘리는 종속된 존재가 아니라, 어떤 상황에서도 ‘나의 본심’, ‘나의 욕구’를 충족하는 방법을 찾아 ‘선택’할 수 있는 사람이다. 그것을 교사 자신이 먼저 믿어야 한다. 그리고 그 믿음을 실천해야 한다.</p>
+								<p>&nbsp;&nbsp;학생이 어떤 말이건 해도 된다는 사실을 “괜찮아. 무슨 말이든 해 봐.”라고 ‘말하기’로 전달하면 안 된다. 학생이 어떤 말을 하더라도 “네 말은 ~라는 말이구나.(1) 사실 듣기.”로 ‘듣기’로 반응해 주면, 학생들의 자존감이 서서히 올라간다.</p>
+								<table>
+									<tr>
+										<td>
+										<ul>
+											<li>학생: 선생님, 솔직히 우리 반에 관심 있으세요?
+												<ul>
+														<li>가. “내가 그동안 우리 반에 무심했구나.” → 후회, 죄책감</li>
+														<li>나. “너는 뭘 잘 했다고 그런 말을 하니? 학생이 선생에게 건방지게?” → 분노, 괘씸함</li>
+														<li>다. “나의 노력도 몰라주다니, 내가 이런 말을 듣다니.” → 섭섭함, 억울함</li>
+														<li>라. “이 아이가 나에게 서운한 게 있었구나, 보살핌 받는다는 느낌을 받지 못했구나.” → 염려, 안타까움 등</li>
+												</ul>
+											</li>
+										</ul>
+										</td>
+									</tr>
+								</table>
+								<p>&nbsp;&nbsp;학생이 “선생님, 솔직히 우리 반에 관심 있으세요?”라고 할 때, 교사는 가~라 중에서 하나를 고를 수 있다. 교사가 무엇을 고르는가에 따라 학생과의 대화가 '후회되는 일'로 교사에게 남기도 하고, '억울한 일을 당했다'는 기억으로 남기도 하고, '학생에 대한 안타까움과 염려스러운 일'로 기억되기도 한다. 교사가 굳이 가~라 중에서 하나를 애써 고를 필요 없이 학생의 ‘말’, ‘기분’, ‘본심’에 주목해 보자.</p>
+								<table>
+										<tr>
+											<td>
+											<ul>
+												<li>학생: 선생님, 선생님이 우리를 차별 대우해서 짜증나고 선생님이 싫어요!
+												</li>
+											</ul>
+											<p></p>교사: 내가 너희를 차별 대우한다는 말이구나.<br />
+											학생: 네. 맨날 쟤네들만 말 걸어주고 칭찬해 주잖아요.<br />
+											교사: 내가 저 애들에게만 말 걸어주고 칭찬해 줬다는 말이구나.<br />
+											학생: 네. 우리한테는 말도 안 걸어주고.<br />
+											교사: 내가 너희한테는 말도 안 걸어줬다는 말이구나.<br />
+											학생: 네.<br />
+											교사: 그렇다면 정말 실망스럽고 서운하기도 하고, 속도 상하고 내가 원망스럽기도 하고, 또 저 애들에게 질투도 났겠다.<br />
+											학생: 네.<br />
+											교사: 그러니까 네가 진짜로 원하는 건 내가 앞으로 너희들에게 말도 걸어주고 칭찬도 해 줬으면 좋겠다는 말이지?</p>
+											</td>
+										</tr>
+									</table>
+									<p>&nbsp;&nbsp;진정한 듣기란 “네가 어떻게 나한테 그런 말을 할 수가 있니?” 대신 “네가 나한테 그런 말을 하다니, 무슨 일이 있었구나. 내가 들어줄게.” 라고 반응하는 것이다. 결국 학생을 ‘이해’하겠다는 태도이다. 이러한 대화의 결과는 극적으로 찾아오기도 하고 서서히 찾아오기도 한다. 배운 대로 해도 안 되더라면서 금방 본래 말투로 돌아가는 교사들이 많다. 그런 분들은 본래 말투로 학생들을 상대해도 크게 불편함이 없는 분들이다. 하지만 가끔씩이라도 불편함을 느낀다면 (1)~(3) 단계 대화를 최소 3개월 시험 삼아 일상적으로 사용해 볼 것을 권한다.</p>
+									<p>&nbsp;&nbsp;(1) 사실 듣기 “학생의 말을 그대로 따라 말해 준다.”에서 주의할 사항이 있다. EBS 다큐멘터리 "아이의 자존감"을 보면 다음과 같은 장면이 나온다.</p>
+									<table>
+											<tr>
+												<td>
+												<ul>
+													<li>아이: 우리 반 선생님은 반장만 이뻐해. 하는 일이라곤 애들 이름 적는 거밖에 없는데 힘들다고 청소도 안 시켜.</li>
+													<li>부모: 뭐 그런 선생님이 다 있어.</li>
+												</ul>
+												</td>
+											</tr>
+										</table>
+									<video src="./videos/05_ebs.mp4" width="640" preload="metadata" controls="controls"></video>
+
+
+
 							</section>
 							
 							<section>
