--- a/html/bs/index.html
+++ b/html/bs/index.html
@@ -471,19 +471,30 @@
 									</table>
 									<p>&nbsp;&nbsp;진정한 듣기란 “네가 어떻게 나한테 그런 말을 할 수가 있니?” 대신 “네가 나한테 그런 말을 하다니, 무슨 일이 있었구나. 내가 들어줄게.” 라고 반응하는 것이다. 결국 학생을 ‘이해’하겠다는 태도이다. 이러한 대화의 결과는 극적으로 찾아오기도 하고 서서히 찾아오기도 한다. 배운 대로 해도 안 되더라면서 금방 본래 말투로 돌아가는 교사들이 많다. 그런 분들은 본래 말투로 학생들을 상대해도 크게 불편함이 없는 분들이다. 하지만 가끔씩이라도 불편함을 느낀다면 (1)~(3) 단계 대화를 최소 3개월 시험 삼아 일상적으로 사용해 볼 것을 권한다.</p>
 									<p>&nbsp;&nbsp;(1) 사실 듣기 “학생의 말을 그대로 따라 말해 준다.”에서 주의할 사항이 있다. EBS 다큐멘터리 "아이의 자존감"을 보면 다음과 같은 장면이 나온다.</p>
+									<video src="./videos/05_ebs.mp4" width="640" preload="metadata" controls="controls"></video>
+									<p>&nbsp;&nbsp;아이가 공감받기를 원한다고 해서 만약 다음의 '부모'처럼 반응한다면 어떨까?</p>
 									<table>
 											<tr>
 												<td>
 												<ul>
 													<li>아이: 우리 반 선생님은 반장만 이뻐해. 하는 일이라곤 애들 이름 적는 거밖에 없는데 힘들다고 청소도 안 시켜.</li>
-													<li>부모: 뭐 그런 선생님이 다 있어.</li>
+													<li>부모1: 뭐 그런 선생님이 다 있어.</li>
+													<li>부모2: 너희 선생님 정말 이상하다, 그치.</li>
 												</ul>
 												</td>
 											</tr>
-										</table>
-									<video src="./videos/05_ebs.mp4" width="640" preload="metadata" controls="controls"></video>
-
-
+									</table>
+									<p>&nbsp;&nbsp;이것은 단순한 편들어주기일 뿐, ‘공감’하는 말투와는 거리가 멀다. 그런데도 영상에서는 ‘공감하기’라고 말해준다. 이 말투의 함정은 부모가 아이에게 공감하는 것이 아니라 부모와 아이가 한패가 되어 교사를 험담하는 결과가 된다. 단톡방의 언어 폭력도 마찬가지. 그냥 친구말에 거들어 준 것일 뿐 적극적인 뒷담화를 하지도 않은 학생이 공범으로 몰리는 일이 비일비재하다. 궁지에 몰린 학생들의 책임회피는 무섭다. 학교 가서 선생님에게 “우리 아빠도 선생님이 이상하다던데요.” 이렇게 말한다. 같이 뒷담하기가 되어선 안 된다. 앞에서 ‘문과, 이과’로 고민하는 학생에게 교사가 “문과 성적이 좋으면 문과 가야지.”라고 말해 주면 안 된다. 학생이 인생이 괴로울 때마다 “그때 선생님이 문과 가라고 해서 그렇잖아요.”라며 평생 원망한다.</p>
+									<p>&nbsp;&nbsp;그러면 어떻게 해야할까? 우스개로 하면 다음 이야기의 ‘선생’처럼 하면 된다.</p>
+									<blockquote>
+														선생은 안경 너머로 소년을 올려다보며 말한다.
+														“내가 얘길 하나 들려줄까? 어떤 집에서 아들을 얻어 몹시 기뻤지. 한 달이 지나 덕담을 들으려고 손님을 청했단다. 한 사람이 말했어. ‘이 녀석 크면 큰 부자가 되겠는데요.’ 부모는 기뻤지. 다른 사람이 말했다. ‘관상을 보니 높은 벼슬을 하게 생겼어요.’ 더 흐뭇했지. 어떤 사람이 말했다. ‘이 아이는 나중에 틀림없이 죽겠군요.’ 그는 술 한잔 못 얻어먹고 죽도록 매를 맞고 쫓겨났단다. 누구나 죽기 마련이니 그가 거짓말을 한 건 아니지. 하지만 아무나 부자가 되고 벼슬을 하는 것은 아니니 그건 거짓말일 수도 있다. 거짓말한 사람은 보답을 받고, 사실대로 말한 사람은 죽도록 얻어맞은 셈이지.”
+														소년이 대답했다.
+														“선생님! 저는 거짓말도 하기 싫고 맞기도 싫어요. 그러면 어떻게 말해야 하지요?”
+														“이렇게 대답하면 된다. 와! 이 녀석은 정말! 허참! 이걸 좀 보세요! 어쩌면, 이야! 아이쿠! 햐! 허허!”
+														루쉰(魯迅)의 수필에 나오는 얘기다.
+													   - 정민 <세설신어>70
+									</blockquote>
 
 							</section>
 							
