--- a/html/bs/index.html
+++ b/html/bs/index.html
@@ -202,11 +202,10 @@
 								<p>&nbsp;&nbsp;실제 사례에서 피해자의 감정 변화는 다음과 같다.(전근 간 첫 학교에서 생활지도부장을 할 때 3월에 중3 남학생 2명이 싸운 일이다. 레포 형성 같은 건 전혀 없는 상태임.)</p>
 								<table class="alt">
 									<tr>
-										<td>
+										<td style="width: 200px;">
 											￭ 지금 기분
 										</td>
-										<td>
-										<p>흥분되는, 눈물겨운, 후회스러운, 울고싶은, 막막한, 무거운, 얄미운, 열받는, 지겨운, 짜증스러운, 기분나쁜, 당황스러운, 어이없는, 참을 수 없는, 쪽팔리는, 무거운, 쉬고 싶은</p>
+										<td>흥분되는, 눈물겨운, 후회스러운, 울고싶은, 막막한, 무거운, 얄미운, 열받는, 지겨운, 짜증스러운, 기분나쁜, 당황스러운, 어이없는, 참을 수 없는, 쪽팔리는, 무거운, 쉬고 싶은
 										</td>
 									</tr>
 									<tr>
@@ -214,7 +213,7 @@
 											￭ 싸울 때 기분
 										</td>
 										<td>
-										<p>죽고싶은, 뭔가 잃은 듯한, 못마땅한, 심술나는, 원망스러운, 불만스러운, 신경질나는, 피하고 싶은, 꼴보기 싫은, 무서운, 놀라운, 멍한, 죽을 것 같은, 조마조마한, 충격적인, 답답한, 기가 막힌, 가슴아픈, 소름끼치는, 숨막히는, 쓰러질 것 같은, 미안한, 창피한, 캄캄한, 뭐가 뭔지 알수없는</p>
+										죽고싶은, 뭔가 잃은 듯한, 못마땅한, 심술나는, 원망스러운, 불만스러운, 신경질나는, 피하고 싶은, 꼴보기 싫은, 무서운, 놀라운, 멍한, 죽을 것 같은, 조마조마한, 충격적인, 답답한, 기가 막힌, 가슴아픈, 소름끼치는, 숨막히는, 쓰러질 것 같은, 미안한, 창피한, 캄캄한, 뭐가 뭔지 알수없는
 										</td>
 									</tr>
 									<tr>
@@ -223,7 +222,7 @@
 											￭ 표현하고 나서 기분
 										</td>
 										<td>
-										<p>안타까운, 지겨운, 불쾌한, 혼란스러운, 그저 그런</p>
+										안타까운, 지겨운, 불쾌한, 혼란스러운, 그저 그런
 										</td>
 									</tr>
 									<tr>
@@ -231,7 +230,7 @@
 											￭ 상대의 말을 들어본 기분
 										</td>
 										<td>
-										<p>괜찮은, 따사로운, 허탈한, 외로운, 거북스러운, 서운한, 부담스러운, 긴장되는, 미안한</p>
+										괜찮은, 따사로운, 허탈한, 외로운, 거북스러운, 서운한, 부담스러운, 긴장되는, 미안한
 										</td>
 									</tr>
 									<tr>
@@ -239,7 +238,7 @@
 											￭ 다 끝나고 기분
 										</td>
 										<td>
-										<p>씁쓸한, 큰일 날 것 같은(부모님한테 혼날까봐), 민망한, 창피한, 안심되는, 편안한</p>
+										씁쓸한, 큰일 날 것 같은(부모님한테 혼날까봐), 민망한, 창피한, 안심되는, 편안한
 										</td>
 									</tr>
 								</table>
@@ -416,7 +415,7 @@
 							<section>
 								<h2><a name="5">5. 학생과 교사 사이의 갈등 해결하기</a></h2>
 								<p>&nbsp;&nbsp;‘정신적 피해’라는 것을 대할 때는 두 가지 관점이 있다. 첫째, 눈에 보이지 않지만 본인이 그렇게 느낀다면, 그것은 실제하는 피해가 된다. 피해 당사자가 느끼고 있는 불안감, 혐오감, 불쾌감, 분노, 두려움, 불만 등을 ‘그건 실체가 아니야.’, ‘그건 오해한 거야.’, ‘그런 감정은 느껴선 안 돼.’라고 부정하는 것은 그 학생을 ‘이해’하는 태도가 아니다. 그것이 사실의 왜곡이나 본인의 피해의식, 강박관념이 만들어낸 허상이라 하더라도, 우선은 “그렇구나. 너는 그렇게 느끼는구나.”에서 출발해야 ‘본심’으로 찾아가는 길로 들어설 수 있게 된다. 둘째, 정신적 피해를 극복하는 것은 자존감을 올리는 길 뿐이다. 남들이 내 험담을 해서, 남들이 째려 봐서, 남들이 나를 따돌려서, 남들이 내 말을 안 들어줘서, 남들이... 그 모든 것들이 ‘남’에 의해 유발된 부정적 감정이다. 내 감정의 주인은 ‘나’여야 한다. 남들의 반응 하나하나에 일일이 내 감정이 흔들린다면 살아갈 수가 없다. 관계의 리더가 되어야 한다는 말이다. 그것은 학생 개인의 ‘자존감’과 관계 있는 부분이다.</p>
-								<p>&nbsp;&nbsp;왕따는 물리적인 문제이기도 하지만 정신적인 문제이기도 하다. 정신적인 왕따 문제라면 아래 영상에서처럼 '자존감'만 회복하면 아무런 문제가 안 된다. 그리고 아래 영상의 좋은 점은, 물리적인 왕따는 "괴롭힘"이 아니라 "범죄"라고 알려준다는 점이다. "범죄"는 참아 넘기면 안 되고 처벌해야 한다.
+								<p>&nbsp;&nbsp;왕따는 물리적인 문제이기도 하지만 정신적인 문제이기도 하다. 정신적인 왕따 문제라면 아래 영상에서처럼 '자존감'만 회복하면 아무런 문제가 안 된다. 그리고 아래 영상의 좋은 점은, 물리적인 왕따는 "괴롭힘"이 아니라 "범죄"라고 알려준다는 점이다. "범죄"는 참아 넘기면 안 되고 처벌해야 한다.</p>
 								<video src="./videos/04_bull.mp4" width="640" preload="metadata" controls="controls"></video>
 								<p>&nbsp;&nbsp;그렇다고 이 영상에서처럼 학생에게 무작정 “자존감을 길러.” “친구들의 반응을 무시해.” “신경 끄면 되잖아.”라고 아무리 말해도 소용이 없다. 교사 자신이 학생의 자존감을 길러주는 대화를 해야 한다. 그것은 학생의 말을 있는 그대로 존중하는 것. 그리고 교사가 자존감이 높은 사람이 어떻게 행동하는가를 보여주는 것이다. 학생의 말을 모두 따라해주고, 학생의 감정을 섬세하게 들어주고, 학생의 말 속에 숨어 있는 이성적으로 건전한 ‘본심’을 알아봐 주는 말을 모든 학생들에게 반복적으로 해 주는 것이다. 그리고 교사 자신이, 학생들의 어떤 말에도 흔들리지 않고 올바른 대응을 하는 모습을 일상 생활에서 늘 보여줘야 된다.</p>
 								<table>
@@ -487,15 +486,42 @@
 									<p>&nbsp;&nbsp;이것은 단순한 편들어주기일 뿐, ‘공감’하는 말투와는 거리가 멀다. 그런데도 영상에서는 ‘공감하기’라고 말해준다. 이 말투의 함정은 부모가 아이에게 공감하는 것이 아니라 부모와 아이가 한패가 되어 교사를 험담하는 결과가 된다. 단톡방의 언어 폭력도 마찬가지. 그냥 친구말에 거들어 준 것일 뿐 적극적인 뒷담화를 하지도 않은 학생이 공범으로 몰리는 일이 비일비재하다. 궁지에 몰린 학생들의 책임회피는 무섭다. 학교 가서 선생님에게 “우리 아빠도 선생님이 이상하다던데요.” 이렇게 말한다. 같이 뒷담하기가 되어선 안 된다. 앞에서 ‘문과, 이과’로 고민하는 학생에게 교사가 “문과 성적이 좋으면 문과 가야지.”라고 말해 주면 안 된다. 학생이 인생이 괴로울 때마다 “그때 선생님이 문과 가라고 해서 그렇잖아요.”라며 평생 원망한다.</p>
 									<p>&nbsp;&nbsp;그러면 어떻게 해야할까? 우스개로 하면 다음 이야기의 ‘선생’처럼 하면 된다.</p>
 									<blockquote>
-														선생은 안경 너머로 소년을 올려다보며 말한다.
-														“내가 얘길 하나 들려줄까? 어떤 집에서 아들을 얻어 몹시 기뻤지. 한 달이 지나 덕담을 들으려고 손님을 청했단다. 한 사람이 말했어. ‘이 녀석 크면 큰 부자가 되겠는데요.’ 부모는 기뻤지. 다른 사람이 말했다. ‘관상을 보니 높은 벼슬을 하게 생겼어요.’ 더 흐뭇했지. 어떤 사람이 말했다. ‘이 아이는 나중에 틀림없이 죽겠군요.’ 그는 술 한잔 못 얻어먹고 죽도록 매를 맞고 쫓겨났단다. 누구나 죽기 마련이니 그가 거짓말을 한 건 아니지. 하지만 아무나 부자가 되고 벼슬을 하는 것은 아니니 그건 거짓말일 수도 있다. 거짓말한 사람은 보답을 받고, 사실대로 말한 사람은 죽도록 얻어맞은 셈이지.”
-														소년이 대답했다.
-														“선생님! 저는 거짓말도 하기 싫고 맞기도 싫어요. 그러면 어떻게 말해야 하지요?”
-														“이렇게 대답하면 된다. 와! 이 녀석은 정말! 허참! 이걸 좀 보세요! 어쩌면, 이야! 아이쿠! 햐! 허허!”
-														루쉰(魯迅)의 수필에 나오는 얘기다.
+														선생은 안경 너머로 소년을 올려다보며 말한다.<br />
+														“내가 얘길 하나 들려줄까? 어떤 집에서 아들을 얻어 몹시 기뻤지. 한 달이 지나 덕담을 들으려고 손님을 청했단다. 한 사람이 말했어. ‘이 녀석 크면 큰 부자가 되겠는데요.’ 부모는 기뻤지. 다른 사람이 말했다. ‘관상을 보니 높은 벼슬을 하게 생겼어요.’ 더 흐뭇했지. 어떤 사람이 말했다. ‘이 아이는 나중에 틀림없이 죽겠군요.’ 그는 술 한잔 못 얻어먹고 죽도록 매를 맞고 쫓겨났단다. 누구나 죽기 마련이니 그가 거짓말을 한 건 아니지. 하지만 아무나 부자가 되고 벼슬을 하는 것은 아니니 그건 거짓말일 수도 있다. 거짓말한 사람은 보답을 받고, 사실대로 말한 사람은 죽도록 얻어맞은 셈이지.”<br />
+														소년이 대답했다.<br />
+														“선생님! 저는 거짓말도 하기 싫고 맞기도 싫어요. 그러면 어떻게 말해야 하지요?”<br />
+														“이렇게 대답하면 된다. 와! 이 녀석은 정말! 허참! 이걸 좀 보세요! 어쩌면, 이야! 아이쿠! 햐! 허허!”<br />
+														루쉰(魯迅)의 수필에 나오는 얘기다.<br />
 													   - 정민 <세설신어>70
 									</blockquote>
-
+									<p>&nbsp;&nbsp;다음과 같은 상황은 어떨까?</p>
+									<table>
+											<tr>
+												<td>
+												</p>
+									<p>&nbsp;&nbsp;새 옷을 입고 뽐내기 좋아하는 임금님. 나라 돌보는 일보다 옷 갈아입기를 더 좋아해 거울 앞에서 떠날 줄 몰랐지요. 뽐내기 좋아하는 임금님을 모르는 사람은 없었어요. 사기꾼 두 명이 궁궐 앞에서 이렇게 외쳤어요.</p>
+									<p>&nbsp;&nbsp;“저희는 세상에서 가장 아름다운 옷감을 짤 수 있답니다. 바보의 눈에는 보이지 않는 신비한 옷감이지요.”</p>
+									<p>&nbsp;&nbsp;이 말에 귀가 솔깃해진 임금님은 이 옷을 입고 싶어서 사기꾼들에게 큰 돈을 주고 옷을 만들라고 했어요. 옷을 만들라는 명령을 받은 두 사기꾼은 베틀을 놓고 옷감을 짜기 시작했어요. 새 옷이 궁금해진 임금님은 믿을 만한 신하를 보내서 알아봤어요. 하지만 심부름을 온 늙은 신하는 눈앞이 아찔했어요. 아무것도 보이지 않았으니까요. 그러나 바보가 되기 싫어 임금님께 멋진 옷을 만들고 있더라고 전했어요.</p>
+									<p>&nbsp;&nbsp;“드디어 옷이 완성됐습니다.”</p>
+									<p>&nbsp;&nbsp;두 사기꾼이 옷을 가져왔어요. 임금님 눈에는 아무것도 보이지 않았지만 바보라는 말을 듣기 싫어서</p>
+									<p>&nbsp;&nbsp;“오, 이 세상 어디에서도 찾을 수 없는 멋진 옷이야.”</p>
+									<p>&nbsp;&nbsp;라고 말했어요.</p>
+									<p>&nbsp;&nbsp;두 사기꾼은 옷을 입혀 주는 척하고 임금님도 몸을 돌려 거울을 보는 척했어요. 벌거벗은 임금님을 본 첫번째 신하가 말했어요.</p>
+									<p>&nbsp;&nbsp;“아니, 아무것도 안 보이는군요. 임금님은 벌거벗고 계시잖아요.”</p>
+									<p>&nbsp;&nbsp;임금님은 화가 났어요.</p>
+									<p>&nbsp;&nbsp;“저런 바보가 지금까지 나의 신하였다니. 당장 저 놈을 쫓아버려라.”</p>
+									<p>&nbsp;&nbsp;첫번째 신하는 궁에서 쫓겨났어요. 두번째 신하가 말했어요.</p>
+									<p>&nbsp;&nbsp;“이런 색과 무늬는 처음입니다! 정말 아름다운 옷입니다.”</p>
+									<p>&nbsp;&nbsp;임금님은 기분이 좋아졌어요. 당장 새 옷을 입고 거리를 행진하며 뽐내고 싶어서 세번째 신하에게 물었어요.</p>
+									<p>&nbsp;&nbsp;“자네는 나의 새 옷이 어떤가?”</p>
+									<p>&nbsp;&nbsp;세번째 신하는 옷 따위는 보이지 않았지만 궁에서 쫓겨나기도 싫고 거짓말을 하기도 싫었어요. 그래서 이렇게 말했어요.</p>
+									<p>&nbsp;&nbsp;<a class="button fit small">“__________________________________________________________”</a></p>
+												</td>
+											</tr>
+									</table>
+									<p>&nbsp;&nbsp;세번째 신하가 할 말은 “잘 어울리십니다.”이다. 나중에 “너 왜 안 보이면서 거짓말했냐?”라고 임금님이 따져도 할 말이 있다. 허영쟁이 임금님에게 그런 가짜옷은 ‘잘 어울리는 것’이 당연하다. 그리고 세번째 신하는 “옷이 보인다”라고 하지도 않았다.</p>
+									<p>&nbsp;&nbsp;현실에서는 (1) 사실 듣기 에서 이러한 함정을 잘 피해가야 한다. ‘교육상담’ 류의 책에서는 상담자가 내담자의 말을 ‘요약’하여 반영해 주는 기법도 소개하는데, 전문적인 상담 훈련을 받지 않은 교사라면 ‘요약’에 교사의 주관이 개입될 수 있기 때문에 학생이 한 말을 ‘그대로’ 따라 말해 주는 것이 가장 안전하다. </p>
+									<video src="./videos/06_girl.mp4" width="640" preload="metadata" controls="controls"></video>
 							</section>
 							
 							<section>
