--- a/html/bs/index.html
+++ b/html/bs/index.html
@@ -517,10 +517,11 @@
 									<p>&nbsp;&nbsp;<a class="button fit small">“__________________________________________________________”</a></p>
 												</td>
 											</tr>
-									</table>
+									</table>									
+									<span class="image right"><video src="./videos/06_girl.mp4" width="640" preload="metadata" controls="controls"></video></span>
 									<p>&nbsp;&nbsp;세번째 신하가 할 말은 “잘 어울리십니다.”이다. 나중에 “너 왜 안 보이면서 거짓말했냐?”라고 임금님이 따져도 할 말이 있다. 허영쟁이 임금님에게 그런 가짜옷은 ‘잘 어울리는 것’이 당연하다. 그리고 세번째 신하는 “옷이 보인다”라고 하지도 않았다.</p>
 									<p>&nbsp;&nbsp;현실에서는 (1) 사실 듣기 에서 이러한 함정을 잘 피해가야 한다. ‘교육상담’ 류의 책에서는 상담자가 내담자의 말을 ‘요약’하여 반영해 주는 기법도 소개하는데, 전문적인 상담 훈련을 받지 않은 교사라면 ‘요약’에 교사의 주관이 개입될 수 있기 때문에 학생이 한 말을 ‘그대로’ 따라 말해 주는 것이 가장 안전하다. </p>
-									<video src="./videos/06_girl.mp4" width="640" preload="metadata" controls="controls"></video>
+									
 							</section>
 							
 							<section>
