--- a/html/bs/index.html
+++ b/html/bs/index.html
@@ -618,6 +618,14 @@
 				<!-- Footer -->
 				<footer id="footer">
 					<div class="inner">
+							<table>
+									<tr>
+										<td>
+						<p>&nbsp;&nbsp;“어두운 방에 좁은 틈으로 새어 들어오는 빛을 보라. 물체에 닿으면 격렬하게 부딪히거나 체념하여 수직으로 떨어지지 않고 그곳에 자리를 잡고 물체를 조용히 비춘다.”</p>
+							<p style="text-align: right">&nbsp;&nbsp;- 아우렐리우스, ⟪명상록⟫</p>
+							<p>&nbsp;&nbsp;교사는 어두운 방에 새어 들어오는 빛과 같다. 학생의 저항을 만날 떄, 격렬하게 부딪히거나 체념하여 수직으로 떨어지지 않고, 그곳에 자리를 잡고 학생을 조용히 비출 따름이다. 그것은 몇 마디 말만으로도 실천 가능하다.</p></td>
+						</tr>
+					</table>
 						<ul class="copyright"><li>
 						&copy; <a href="jangi.net">JANGI.NET</a> All rights reserved.
 						</li></ul>
