--- a/html/bs/index.html
+++ b/html/bs/index.html
@@ -202,7 +202,7 @@
 								<p>&nbsp;&nbsp;실제 사례에서 피해자의 감정 변화는 다음과 같다.(전근 간 첫 학교에서 생활지도부장을 할 때 3월에 중3 남학생 2명이 싸운 일이다. 레포 형성 같은 건 전혀 없는 상태임.)</p>
 								<table class="alt">
 									<tr>
-										<td style="width: 200px;">
+										<td>
 											￭ 지금 기분
 										</td>
 										<td>흥분되는, 눈물겨운, 후회스러운, 울고싶은, 막막한, 무거운, 얄미운, 열받는, 지겨운, 짜증스러운, 기분나쁜, 당황스러운, 어이없는, 참을 수 없는, 쪽팔리는, 무거운, 쉬고 싶은
@@ -514,11 +514,11 @@
 									<p>&nbsp;&nbsp;임금님은 기분이 좋아졌어요. 당장 새 옷을 입고 거리를 행진하며 뽐내고 싶어서 세번째 신하에게 물었어요.</p>
 									<p>&nbsp;&nbsp;“자네는 나의 새 옷이 어떤가?”</p>
 									<p>&nbsp;&nbsp;세번째 신하는 옷 따위는 보이지 않았지만 궁에서 쫓겨나기도 싫고 거짓말을 하기도 싫었어요. 그래서 이렇게 말했어요.</p>
-									<p>&nbsp;&nbsp;<a class="button fit small">“__________________________________________________________”</a></p>
+									<p style="width: 640px">&nbsp;&nbsp;<a class="button fit small">“__________________________________________________________”</a></p>
 												</td>
 											</tr>
 									</table>									
-									<span class="image right"><video src="./videos/06_girl.mp4" width="640" preload="metadata" controls="controls"></video></span>
+									<span class="image right" style="width: 640px"><video src="./videos/06_girl.mp4" width="640" preload="metadata" controls="controls"></video></span>
 									<p>&nbsp;&nbsp;세번째 신하가 할 말은 “잘 어울리십니다.”이다. 나중에 “너 왜 안 보이면서 거짓말했냐?”라고 임금님이 따져도 할 말이 있다. 허영쟁이 임금님에게 그런 가짜옷은 ‘잘 어울리는 것’이 당연하다. 그리고 세번째 신하는 “옷이 보인다”라고 하지도 않았다.</p>
 									<p>&nbsp;&nbsp;현실에서는 (1) 사실 듣기 에서 이러한 함정을 잘 피해가야 한다. ‘교육상담’ 류의 책에서는 상담자가 내담자의 말을 ‘요약’하여 반영해 주는 기법도 소개하는데, 전문적인 상담 훈련을 받지 않은 교사라면 ‘요약’에 교사의 주관이 개입될 수 있기 때문에 학생이 한 말을 ‘그대로’ 따라 말해 주는 것이 가장 안전하다. </p>
 									
