--- a/html/bs/index.html
+++ b/html/bs/index.html
@@ -514,7 +514,7 @@
 									<p>&nbsp;&nbsp;임금님은 기분이 좋아졌어요. 당장 새 옷을 입고 거리를 행진하며 뽐내고 싶어서 세번째 신하에게 물었어요.</p>
 									<p>&nbsp;&nbsp;“자네는 나의 새 옷이 어떤가?”</p>
 									<p>&nbsp;&nbsp;세번째 신하는 옷 따위는 보이지 않았지만 궁에서 쫓겨나기도 싫고 거짓말을 하기도 싫었어요. 그래서 이렇게 말했어요.</p>
-									<p style="width: 640px">&nbsp;&nbsp;<a class="button fit small">“__________________________________________________________”</a></p>
+									<p>&nbsp;&nbsp;“<u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</u>”</p>
 												</td>
 											</tr>
 									</table>									
