--- a/html/bs/index.html
+++ b/html/bs/index.html
@@ -663,5 +663,6 @@ s.setAttribute('data-timestamp', +new Date());
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+<script id="dsq-count-scr" src="//zipnumsa.disqus.com/count.js" async></script>
 	</body>
 </html>
