--- a/html/bs/index.html
+++ b/html/bs/index.html
@@ -202,7 +202,7 @@
 								<p>&nbsp;&nbsp;실제 사례에서 피해자의 감정 변화는 다음과 같다.(전근 간 첫 학교에서 생활지도부장을 할 때 3월에 중3 남학생 2명이 싸운 일이다. 레포 형성 같은 건 전혀 없는 상태임.)</p>
 								<table class="alt">
 									<tr>
-										<td>
+										<td style="width:200px">
 											￭ 지금 기분
 										</td>
 										<td>흥분되는, 눈물겨운, 후회스러운, 울고싶은, 막막한, 무거운, 얄미운, 열받는, 지겨운, 짜증스러운, 기분나쁜, 당황스러운, 어이없는, 참을 수 없는, 쪽팔리는, 무거운, 쉬고 싶은
