--- a/html/bs/index.html
+++ b/html/bs/index.html
@@ -643,9 +643,9 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-			
-			
-					<div id="disqus_thread"></div>
+
+<div id="disqus_thread"></div>
+
 <script>
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
@@ -654,5 +654,6 @@ s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
 </script>
-	</body>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<script id="dsq-count-scr" src="//zipnumsa.disqus.com/count.js" async></script>	</body>
 </html>
