--- a/html/bs/002/index.html
+++ b/html/bs/002/index.html
@@ -69,9 +69,9 @@
 								<p>&nbsp;&nbsp;딱 보는 순간, 수행평가는 1) 문학 창작, 2) 설명문 쓰기, 2) 공감 대화 가 떠오릅니다. 한 학기 한 권 읽기는 1) 문학 창작 에 함께 포함시키면 될 것 같습니다. 문학 창작은 시, 소설을 수행평가 해서 연말에 문집을 만들어야겠습니다. 발간 비용을 확보할 준비를 합니다. 서부교육지원청에서 책이바구, 글이바구 동아리를 3월까지 모집한다니 신청서를 써야겠습니다.</p>
 								<p>&nbsp;&nbsp;그리고 4단원의 화자, 시점은 어차피 ‘문학 감상’에 필요하니까 1, 4단원은 묶어서 한 번에 가기로 합니다. 그러면 1학기 문학 수업은, ‘절친’, ‘춘향전’, ‘지렁이 울음소리’, ‘사랑손님과’ 4편을 가지고 ‘화자, 시점, 표현’을 공부하면 되겠습니다.</p>
 								<p>&nbsp;&nbsp;3단원의 담화는 4단원의 ‘공감 대화’ 할 때 이론적 바탕이 되니까 한 번에 묶어서 가기로 합니다. 일단 이번 학년이 저랑 수업하는 게 처음이므로, 수업 시간에 서로 듣는 분위기를 만들기 위해 ‘대화’ 단원을 가장 먼저 수업하기로 합니다. 3월 첫째 시간에 “국어 교과란 무엇인가?”를 하고, 둘째 시간에 “국어 수업은 어떻게 듣는가?”를 할 때, 다음과 같은 표를 알려 줍니다.</p>
-								<table class="alt">
+								<table class="alt"  width="400">
 									<tr>
-										<td>&nbsp;&nbsp;</td><td>듣기</td><td>말하기</td>
+										<td width="200">&nbsp;&nbsp;</td><td width="100">듣기</td><td width="100">말하기</td>
 									</tr>									
 									<tr>
 										<td>공식적인 말</td><td>A</td><td>B</td>
@@ -83,7 +83,7 @@
 								<p>&nbsp;&nbsp;A, B, C, D 의 요령을 알려주고, 그 중 C, D 는 수행평가에 반영한다고 알려줍니다. 그리고셋째 시간부터 바로 공감 대화 수업이 시작됩니다.</p>
 								<p>&nbsp;&nbsp;이제 2단원 설명문만 남았네요. 1) 비문학 글쓰기의 인지적 순서 2) 설명문의 개요 3) 설명문의 전개방식 을 가르쳐야겠다는 생각이 듭니다. 배화여중 강경일 선생님이 ‘설명문 쓰기’를 문집으로 엮은 걸 올해 보내주었습니다. 우리 학교도 올해 “상대적이며 절대적인 감천의 백과사전”을 만들어 보고 싶습니다. 학교에 문집 발간 비용이 나올 구멍이 없는지 더 찾아봐야겠습니다. 잘 되면 연말에 ‘문학 문집’ 1권과 ‘비문학 문집’ 1권이 나올 것 같습니다.</p>
 								<p>&nbsp;&nbsp;이제 순서를 짜야 합니다. 꾸준한 실천이 필요한 [1] 공감 대화가 가장 먼저겠지요. 설명문을 먼저 할까, 생각해 보았으나, 5월에 어버이날, 스승의날이 끼어 있습니다. 시집을 뒤져가며 어버이와 선생님에게 ‘시 편지 쓰기’ 활동을 하고 싶네요. 그러려면 문학을 먼저 해야겠지요. [2] 문학의 화자, 시점, 표현 방법이 두번째가 됩니다. 그리고 [3] 설명문의 전개 방식을 열심히 하다보면 여름 방학이 오겠네요. [2] 문학의 화자, 시점, 표현 방법은 작품을 바꿔서 자꾸 문제를 만들 수 있으므로 중간 고사에도 반영하고, 기말 고사에도 반영합니다.</p>		
-								<p>&nbsp;&nbsp;그래서 최종적으로 다음과 같이 재구성됩니다.</p>							
+								<p>&nbsp;&nbsp;<a name="2">그래서 최종적으로 다음과 같이 재구성됩니다.</a></p>							
 								<img src="images/cha2.png" alt="" /><br />	
 								<p>&nbsp;&nbsp;이제 세부계획을 짜야 하는데요, 일단 다음과 같이 정리하고 구체적인 루브릭은 하루 쉬었다가 짭니다.</p>
 								<table>
@@ -95,7 +95,7 @@
 다. 수업 중에 듣기, 말하기 3단계를 실천하면 가산점을 주기<br />
 라. 수업 중에 듣기, 말하기 3단계에 어긋난 발언을 하면 감점하기<br />
 
-</h3>[2] 문학 감상, 창작</h3>
+<h3>[2] 문학 감상, 창작</h3>
 가. 한 학기 한 권 읽기: 시집 읽고 운율, 역설, 반어, 풍자를 찾아 분석하는 글 쓰기<br />
 나. 운율, 역설, 반어, 풍자, 기타 표현 방법을 살려 시 쓰기<br />
 나. 화자, 시점의 효과를 드러내고 역설, 반어, 풍자, 기타 표현 방법을 살려 소설 쓰기<br />
@@ -107,11 +107,10 @@
 										</td>
 									</tr>
 								</table>				
-								<p>&nbsp;&nbsp;이제 2단원 설명문만 남았네요. 1) 비문학 글쓰기의 인지적 순서 2) 설명문의 개요 3) 설명문의 전개방식 을 가르쳐야겠다는 생각이 듭니다. 배화여중 강경일 선생님이 ‘설명문 쓰기’를 문집으로 엮은 걸 올해 보내주었습니다. 우리 학교도 올해 “상대적이며 절대적인 감천의 백과사전”을 만들어 보고 싶습니다. 학교에 문집 발간 비용이 나올 구멍이 없는지 더 찾아봐야겠습니다. 잘 되면 연말에 ‘문학 문집’ 1권과 ‘비문학 문집’ 1권이 나올 것 같습니다.</p>
-								<p>&nbsp;&nbsp;이제 순서를 짜야 합니다. 꾸준한 실천이 필요한 [1] 공감 대화가 가장 먼저겠지요. 설명문을 먼저 할까, 생각해 보았으나, 5월에 어버이날, 스승의날이 끼어 있습니다. 시집을 뒤져가며 어버이와 선생님에게 ‘시 편지 쓰기’ 활동을 하고 싶네요. 그러려면 문학을 먼저 해야겠지요. [2] 문학의 화자, 시점, 표현 방법이 두번째가 됩니다. 그리고 [3] 설명문의 전개 방식을 열심히 하다보면 여름 방학이 오겠네요. [2] 문학의 화자, 시점, 표현 방법은 작품을 바꿔서 자꾸 문제를 만들 수 있으므로 중간 고사에도 반영하고, 기말 고사에도 반영합니다.</p>		
+								<p>&nbsp;&nbsp;* 교육계획서에는 1년치 평가 계획이 들어가야 하므로 2학기 교과서를 보면서 2학기 평가 계획도 일단 수립해 둬야 합니다.</p>		
 							</section>
 							<section>
-								<h2><a name="2">2. 상담과 생활지도</a></h2>
+								<h2><a name="3">창비 중학교 2학년  2학기 교과서는 다음과 같습니다.</a></h2>
 								<p>&nbsp;&nbsp;‘상담’이라고 하면 몇 가지 장면이 떠오른다. 첫째, 3월에 학생들을 파악하기 위해 한 명씩 불러서 담임 선생님과 학생이 나누는 대화. 둘째, 문제 있는 학생과 교사가 문제 행동에 대하여 나누는 대화. 셋째, 학생이 고민이 있어서 교사를 찾아와서 위로나 조언을 구하는 대화. 이중 첫째와 둘째는 상담이 아니다. ‘상담’을 모욕하는 말이다. 첫째는 굳이 이름 붙이면 ‘면담’이고 둘째는 ‘취조’ 아니면 ‘훈육’ 정도가 될 것이다. 셋째의 경우가 상담이며, 전문적인 상담 기술이 필요한 주제라면 교내의 전문 상담 교사나 외부의 상담기관에 맡겨야 하고, 일반적인 주제라면 간단한 상담 대화 기술을 배워서 교사가 해결할 수 있다.</p>
 								<img src="images/01neis.gif" alt="" /><br />
 								<p>&nbsp;&nbsp;요즘은 어떤지 모르겠지만 담임을 할 때 NEIS 시스템에 상담 기록을 남기라고 하면서 이런 시스템을 만들어 준 적이 있었다. 상담의 소분류를 만든 사람이 상담을 뭐라고 생각하는지 알 수 있다.</p>
