--- a/html/bs/002/index.html
+++ b/html/bs/002/index.html
@@ -98,8 +98,8 @@
 <h3>[2] 문학 감상, 창작</h3>
 가. 한 학기 한 권 읽기: 시집 읽고 운율, 역설, 반어, 풍자를 찾아 분석하는 글 쓰기<br />
 나. 운율, 역설, 반어, 풍자, 기타 표현 방법을 살려 시 쓰기<br />
-나. 화자, 시점의 효과를 드러내고 역설, 반어, 풍자, 기타 표현 방법을 살려 소설 쓰기<br /><br />
-라. (3분 글쓰기 공책을 사야겠습니다.)<br />
+나. 화자, 시점의 효과를 드러내고 역설, 반어, 풍자, 기타 표현 방법을 살려 소설 쓰기<br />
+라. (<a href="http://jangi.net/RG/rg4_board/view.php?&bbs_code=free&bd_num=716">3분 글쓰기 공책을 사야겠습니다.</a>)<br /><br />
 
 <h3>[3] 설명문 쓰기</h3>
 가. 가장 잘 아는 것을 골라 개요를 짜고 설명문을 쓰기<br />
