--- a/html/bs/002/index.html
+++ b/html/bs/002/index.html
@@ -74,10 +74,10 @@
 										<td  style="width:150px; text-altgn:center">&nbsp;&nbsp;</td><td  style="width:100px; text-altgn:center">듣기</td><td  style="width:100px; text-altgn:center">말하기</td>
 									</tr>									
 									<tr>
-										<td  style="width:100px; text-altgn:center">공식적인 말</td><td>A</td><td>B</td>
+										<td  style="width:150px; text-altgn:center">공식적인 말</td><td>A</td><td>B</td>
 									</tr>
 									<tr>
-										<td  style="width:100px; text-altgn:center">비공식적인말</td><td>C</td><td>D</td>
+										<td  style="width:150px; text-altgn:center">비공식적인말</td><td>C</td><td>D</td>
 									</tr>
 								</table>						
 								<p>&nbsp;&nbsp;A, B, C, D 의 요령을 알려주고, 그 중 C, D 는 수행평가에 반영한다고 알려줍니다. 그리고셋째 시간부터 바로 공감 대화 수업이 시작됩니다.</p>
@@ -141,7 +141,56 @@
 								</table>				
 								<p>&nbsp;&nbsp;<a name="4">2학기 수업 계획은 다음과 같습니다.</a></p>
 								<img src="images/2cha2.png" alt="" /><br />
-								<p>&nbsp;&nbsp;아직 2학기 세부계획 루브릭을 안 짭니다. 귀찮거든요.</p>
+								<p>&nbsp;&nbsp;아직 2학기 세부계획 루브릭을 안 짭니다. 귀찮거든요. 연구부에는 1학기 세부 계획이랑 다음 표만 제출하면 되지요.</p>
+								<p>1학기 국어과 평가 계획</p>
+								<table class="alt">
+									<tr>
+										<td></td>
+										<td colspan="3">수행평가</td>
+										<td colspan="2"></td>
+									</tr>
+									<tr>
+										<td>종류</td>
+										<td>공감대화</td>
+										<td>문학감상창작</td>
+										<td>설명문쓰기</td>
+										<td>중간고사</td>
+										<td>기말고사</td>
+									</tr>
+									<tr>
+										<td>비율</td>
+										<td>15%</td>
+										<td>30%</td>
+										<td>15%</td>
+										<td>20%</td>
+										<td>20%</td>
+									</tr>
+								</table>						
+								<p>2학기 국어과 평가 계획</p>						
+								<table class="alt">
+									<tr>
+										<td></td>
+										<td colspan="3">수행평가</td>
+										<td colspan="2"></td>
+									</tr>
+									<tr>
+										<td>종류</td>
+										<td>독서의 생활화</td>
+										<td>발표</td>
+										<td>고쳐쓰기</td>
+										<td>중간고사</td>
+										<td>기말고사</td>
+									</tr>
+									<tr>
+										<td>비율</td>
+										<td>15%</td>
+										<td>30%</td>
+										<td>15%</td>
+										<td>20%</td>
+										<td>20%</td>
+									</tr>
+								</table>					
+								
 								</section>
 
 						</div>
