--- a/html/jk/index.html
+++ b/html/jk/index.html
@@ -111,12 +111,13 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content container">
 					<header>
-						<h2>공간 대여</h2>
+						<h2>공간 대여 </h2>
 						<p>서울 서촌의 작은 모임 공간을 빌려드립니다.</p>
 					<ul>
 						<li>36명 규모의 회의, 강의, 휴게 공간</li>
 						<li>주7일, 09:00~22:00</li>
 						<li>wifi, 음향, 영상 장비 갖춤.(노트북 본인 지참)</li>
+						<li><a href="http://koredu.new21.net/jk/?p=1" class="button style2 right">→ 자세히 보기</a></li>
 					</ul>
 					</header>
 					<div class="box container 75%">
