--- a/html/jk/ham.html
+++ b/html/jk/ham.html
@@ -44,8 +44,9 @@
 						<h2>학생 평가의 전환 2</h2>
 					</header>
 					<p><strong>독서 구술 평가의 첫 시도
-					</strong>-김유경<br /> 
-					1. 형식을 바꾸고 싶었습니다<br /> <br /> 
+					</strong>-김유경</p>
+					<img src="images/ham1.jpg" style="max-width: 100%">
+					<p><strong>1. 형식을 바꾸고 싶었습니다</strong><br /> <br /> 
 그동안 중학교에서 한 학기 한 권 읽기를 꾸준히 해 오면서 대부분 글로 쓰는 수행평가를 했다. 책
 대화도 시도해 보았지만 내가 만난 중학생 아이들과는 조금 버거운 느낌이었다. 책 읽고 독서 일지
 쓰고 질문에 대한 내용을 쓰는 활동지, 서평까지는 아니지만 활동지를 바탕으로 한 편의 글을 쓰는
