--- a/html/bs/003/index.html
+++ b/html/bs/003/index.html
@@ -58,11 +58,11 @@
 							<section>
 								<h2><a name="1">엄마한테서 카톡이 왔습니다</a></h2>
 								<img src="images/katok.jpg" alt="" /><br />
-<p>겨울왕국2 영화를 책으로 꾸민 책을 보다가 동생과 언니가 대화한 내용이 재밌어서 저한테 사진 찍어서 보내준 겁니다. 동생이 묻습니다.<br /></p>
+<p>겨울왕국2 영화를 책으로 꾸민 책을 보다가 동생과 언니가 대화한 내용이 재밌어서 저한테 사진 찍어서 보내준 겁니다. 동생이 묻습니다.<br />
 "이건(겨울왕궁2 책) 누가 말해주는 거야? 일편은 안나가 말해주는 거잖아."<br />
 언니가 대답합니다.<br />
-"안나가 어떻게 쓰냐? 이 세상에 있지도 않은데."<br />
-								<img src="images/00.jpg" alt="" /><br />
+"안나가 어떻게 쓰냐? 이 세상에 있지도 않은데."<br /></p>
+<p><img src="images/00.jpg" alt="" /></p>
 <p>책을 보니까 진짜 그렇습니다. 어찌된 일인지 겨울왕국1은 책이 "안나"의 1인칭 시점으로 서술되어 있습니다. "안나"가 보지 않는 곳에서 "엘사"에게 벌어진 일은 서술되어 있지 않습니다.</p>
 								<img src="images/02.jpg" alt="" /><br />
 <p>그리고 예상대로 겨울왕국2 책은 "전지적작가시점"으로 되어 있습니다. </p>
