--- a/html/bs/index.html
+++ b/html/bs/index.html
@@ -10,6 +10,7 @@
 <h1>보고 싶은 문서 클릭</h1>
 <h2><a href="001/index.html">학생 생활지도의 실제</a></h2>
 <h2><a href="002/index.html">중2 수업 계획 짜기의 실제</a></h2>
+<h2><a href="003/index.html">서술자와 시점 수업 준비</a></h2>
 </body>
 
 </html>
