--- a/html/bs/003/index.html
+++ b/html/bs/003/index.html
@@ -59,7 +59,7 @@
 								<h2><a name="1">엄마한테서 카톡이 왔습니다</a></h2>
 								<img src="images/katok.jpg" alt="" /><br />
 <p>겨울왕국2 영화를 책으로 꾸민 책을 보다가 동생과 언니가 대화한 내용이 재밌어서 저한테 사진 찍어서 보내준 겁니다. 동생이 묻습니다.<br />
-"이건(겨울왕궁2 책) 누가 말해주는 거야? 일편은 안나가 말해주는 거잖아."<br />
+"이건(겨울왕국2  책) 누가 말해주는 거야? 일편은 안나가 말해주는 거잖아."<br />
 언니가 대답합니다.<br />
 "안나가 어떻게 쓰냐? 이 세상에 있지도 않은데."<br /></p>
 <p><img src="images/00.jpg" alt="" /></p>
