--- a/html/book/didim.htm
+++ b/html/book/didim.htm
@@ -9,30 +9,34 @@ img {
   max-width: 100%;
   height: auto;
 }
+iframe {
+  max-width: 100%;
+  height: 360px;
+}
 </style>
 </head>
 
 <body>
 <h1>1. ppt로 학습 자료를 제작하여 재생하는 PC화면을 녹화하고 설명은 '소리'로만 나오는 경우</h1>
 <p>1.1.영상 예시</p>
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/__Ro-u-tf7M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="640" height="360" src="https://www.youtube.com/embed/__Ro-u-tf7M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>1.2.찍어서 올리는 법</p>
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/QfWj2fEd5Ig" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="640" height="360" src="https://www.youtube.com/embed/QfWj2fEd5Ig" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>1.3.<a href="https://ohsoft.net/kor/ocam/download.php?cate=1002">Ocam</a>이라는 화면 녹화 프로그램과 '녹음기(스마트폰도 가능)'가 있으면 됨.</p>
 
 <h1>2. 학습지 실물 풀이와 교사 얼굴 일부가 나오게 할 경우</h1>
 <p>2.1.영상 예시</p>
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/uhh2xg698pY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="640" height="360" src="https://www.youtube.com/embed/uhh2xg698pY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>2.2.찍어서 올리는 법</p>
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/tlzkTBOJVXo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="640" height="360" src="https://www.youtube.com/embed/tlzkTBOJVXo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>2.3.<a href="http://store.neosmartpen.com/goods/goods_view.php?goodsNo=131">이 펜</a>과 <a href="http://store.neosmartpen.com/goods/goods_view.php?goodsNo=72">이 종이</a>를 사야 함.</p>
 
 <h1>3. 인강처럼 찍을 경우</h1>
 <p>3.1.캠코더나 스마트폰으로 그냥 찍기만 하면 됨. 대신 삼각대가 있어야 편리함.</p>
 <p>3.2.스마트폰으로 찍는 경우</p>
-<iframe width="1187" height="791" src="https://www.youtube.com/embed/3qyj5Y8rJFM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="640" height="360" src="https://www.youtube.com/embed/3qyj5Y8rJFM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>3.3.캠코더로 찍는 경우</p>
-<iframe width="1280" height="722" src="https://www.youtube.com/embed/G0Sh3h0GjSM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="640" height="360" src="https://www.youtube.com/embed/G0Sh3h0GjSM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 
 </html>
