--- a/html/frozen/index.htm
+++ b/html/frozen/index.htm
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <style>
-img{max-width: 100%;}
+img{max-width: 100%;height:auto}
 p{font-size:200%;}</style>
 </head>
 <body style="text-align:center;margin:auto">
