--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head><title>XFN 1.1 profile</title>
+<meta http-equiv="refresh" content="0;url=http://zipnumsa.github.io/online/index.html">
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
