--- a/online/index.html
+++ b/online/index.html
@@ -21,6 +21,16 @@
 				<div id="main-wrapper">
 					<div class="wrapper style1">
 						<div class="inner">
+						
+						<!-- Nav -->
+										<nav id="nav">
+											<ul>
+												<li class="current_page_item"><a href="index.html">Home</a></li>
+												<li><a href="01/index.html" >1학년</a></li>
+												<li><a href="02/index.html" >2학년</a></li>
+												<li><a href="03/index.html" >3학년</a></li>
+											</ul>
+										</nav>
 
 							<!-- Feature 1 -->
 								<section class="container box feature1">
