--- a/online/02/index.html
+++ b/online/02/index.html
@@ -131,7 +131,7 @@
 		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[2].pause();">
 </form>
 												
-<!-- 핵심 학습 요소를 간략히 기술 --><p>유한소수와 무한소수아 순환소수의 개념을 이해해 봅시다.</p>
+<!-- 핵심 학습 요소를 간략히 기술 --><p>유한소수와 무한소수와 순환소수의 개념을 이해해 봅시다.</p>
 
 									<!-- 사회 영역 -->
 											<header>
