--- a/online/02/0309.html
+++ b/online/02/0309.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>감천중학교 가정학습실</title>
+		<title>3월 9일 감천중학교 가정학습실</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
