--- a/online/02/0312.html
+++ b/online/02/0312.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>감천중학교 가정학습실</title>
+		<title>3월 12일 감천중학교 가정학습실</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -167,7 +167,7 @@
 									<!-- 음악 영역 -->
 											<header>
 														<h2>음악</h2>
-												<h3>장구 연주법</h3>
+												<h3>장구 연주법 - 중중모리 장단</h3>
 											</header>
 																								<form name="mc">
 <video src="http://content-cdn.edunet.net/edudata/content/com/com/com/spc/com_com_com_spc_14620.mp4" controls="controls"></video>
